<resources>
    <string name="AppName">OpenTab</string>
    <string name="app_version">1.0.0</string>
    <string name="title_activity_login">Sign in</string>
    <string name="owed_to">Owed To</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="header_date">Date</string>
    <string name="header_description">Description</string>
    <string name="header_amount">Amount</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_tabs">Home</string>
    <string name="item_description_hint">(optional)</string>
    <string name="group_item_description_hint">(optional)</string>

    <!-- Actionbar -->
    <string name="actionbar_title_add_group_expense">Add Group Expense</string>
    <string name="actionbar_title_edit_group_expense">Edit Group Expense</string>
    <string name="actionbar_overflow_add_item">Add Item</string>
    <string name="actionbar_overflow_add_member">Add Member</string>
    <string name="actionbar_overflow_edit_members">Edit Members</string>
    <string name="actionbar_overflow_remove_member">Remove Member</string>
    <string name="actionbar_overflow_backup_restore">Backup / Restore</string>
    <string name="actionbar_overflow_change_currency">Change currency</string>
    <string name="actionbar_overflow_export">Export to CSV</string>
    <string name="actionbar_overflow_import">Import from CSV</string>
    <string name="actionbar_overflow_about">About</string>
    <string name="actionbar_overflow_help">Help</string>
    <string name="actionbar_overflow_delete_tab">Delete tab</string>
    <string name="actionbar_overflow_close_tab">Close tab</string>
    <string name="actionbar_overflow_rename_tab">Rename tab</string>
    <string name="actionbar_overflow_settings">Settings</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_message_morning">Good morning, </string>
    <string name="welcome_message_afternoon">Good afternoon, </string>
    <string name="welcome_message_evening">Good evening, </string>

    <!-- View Messages -->
    <string name="flat_balance_primary">You\'re all square!</string>
    <string name="flat_balance_secondary"></string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="general_header">General</string>
    <string name="appearance_header">Appearance</string>
    <string name="other_header">Other</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="themeTitle">Theme</string>
    <string name="themeKey">theme</string>
    <string name="lightKey">light</string>
    <string name="darkKey">dark</string>
    <string name="followSystemKey">followSystem</string>

    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="followSystem">Follow system</string>

    <string name="baseCurrency">Base currency</string>
    <string name="baseCurrencyKey">baseCurrency</string>
    <string name="tab_type_icon">Tab Type Icon</string>
    <string name="empty_tabs_hint">Click the + icon below to start keeping tabs!</string>
    <string name="about_other">Other</string>
    <string name="app_store_link">https://play.google.com/store/apps/details?id=io.oddlot.ledger</string>
    <string name="my_email_address">oddlotapps@gmail.com</string>
    <string name="menu_share">Share</string>
    <string name="menu_pin_tab">Pin Tab</string>
    <string name="transferred_by">From</string>
    <string name="link_ticker_license"><![CDATA[<a href=\'www.yahoo.com\'>Ticker by Robinhood</a>]]></string>
    <string name="link_material_license"><![CDATA[<a href=\'www.yahoo.com\'>Material Components for Android</a>]]></string>
    <string name="welcome_greeting">Welcome to OpenTab! What should I call you?</string>
    <string name="export_all">Export to CSV</string>
</resources>
